--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vite-plugin-inline-source",
-	"version": "2.5.2",
+	"version": "2.5.3",
 	"description": "A vite plugin for inlining files into HTML",
 	"files": [
 		"dist"
@@ -59,7 +59,7 @@
 		"@types/csso": "^5.0.4",
 		"@types/node": "^18.19.42",
 		"@types/terser": "^3.12.0",
-		"@vitest/coverage-v8": "^2.0.4",
+		"@vitest/coverage-v8": "^3.1.1",
 		"husky": "^9.1.2",
 		"lint-staged": "^15.2.7",
 		"prettier": "^3.3.3",
@@ -67,11 +67,11 @@
 		"rollup": "^4.19.0",
 		"tsup": "^8.2.3",
 		"typescript": "^5.5.4",
-		"vite": "^5.3.5",
-		"vitest": "^2.0.4"
+		"vite": "^6.2.6",
+		"vitest": "^3.1.1"
 	},
 	"peerDependencies": {
-		"vite": "2.x || 3.x || 4.x || 5.x"
+		"vite": "2.x || 3.x || 4.x || 5.x || 6.x"
 	},
 	"lint-staged": {
 		"*.{js,ts,jsx,tsx,json,html}": "pnpm lint:fix --staged"
