--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vite-plugin-inline-source",
-	"version": "2.5.3",
+	"version": "2.5.4",
 	"description": "A vite plugin for inlining files into HTML",
 	"files": [
 		"dist"
@@ -47,31 +47,31 @@
 	},
 	"dependencies": {
 		"csso": "^5.0.5",
-		"sass": "^1.77.8",
-		"svgo": "^3.3.2",
-		"terser": "^5.31.3",
+		"sass": "^1.90.0",
+		"svgo": "^4.0.0",
+		"terser": "^5.43.1",
 		"tslib": "^2.6.3",
-		"zod": "^3.23.8"
+		"zod": "^4.0.17"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
+		"@biomejs/biome": "^2.1.4",
 		"@tsconfig/node18": "^18.2.4",
 		"@types/csso": "^5.0.4",
-		"@types/node": "^18.19.42",
+		"@types/node": "^24.2.1",
 		"@types/terser": "^3.12.0",
-		"@vitest/coverage-v8": "^3.1.1",
+		"@vitest/coverage-v8": "^3.2.4",
 		"husky": "^9.1.2",
-		"lint-staged": "^15.2.7",
-		"prettier": "^3.3.3",
-		"publint": "^0.2.9",
-		"rollup": "^4.19.0",
-		"tsup": "^8.2.3",
-		"typescript": "^5.5.4",
-		"vite": "^6.2.6",
-		"vitest": "^3.1.1"
+		"lint-staged": "^16.1.5",
+		"prettier": "^3.6.2",
+		"publint": "^0.3.12",
+		"rollup": "^4.46.2",
+		"tsup": "^8.5.0",
+		"typescript": "^5.9.2",
+		"vite": "^7.1.2",
+		"vitest": "^3.2.4"
 	},
 	"peerDependencies": {
-		"vite": "2.x || 3.x || 4.x || 5.x || 6.x"
+		"vite": "2.x || 3.x || 4.x || 5.x || 6.x || 7.x"
 	},
 	"lint-staged": {
 		"*.{js,ts,jsx,tsx,json,html}": "pnpm lint:fix --staged"
